@@ -1,3 +1,8 @@
+2008-07-30  Nicolas Bruguier  <gandalfn@rohan>
+
+	* src/ccm-display.c (ccm_display_new):
+      - Remove dbe check.
+
 2008-07-30  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
 	* NEWS:
